--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=IRC
+application.vendor=TOLEP
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,31 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/IRC.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.commons-codec-1.6.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\commons-codec-1.6.jar
+file.reference.commons-logging-1.1.1.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\commons-logging-1.1.1.jar
+file.reference.httpclient-4.2.5.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\httpclient-4.2.5.jar
+file.reference.httpcore-4.2.4.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\httpcore-4.2.4.jar
+file.reference.junit-4.4.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\junit-4.4.jar
+file.reference.libthrift-0.9.2.jar=E:\\Thrift\\libthrift-0.9.2.jar
+file.reference.log4j-1.2.14.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\log4j-1.2.14.jar
+file.reference.servlet-api-2.5.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\servlet-api-2.5.jar
+file.reference.slf4j-api-1.5.8.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\slf4j-api-1.5.8.jar
+file.reference.slf4j-log4j12-1.5.8.jar=D:\\AFIK\\Project\\Thrift\\Calculator\\lib\\slf4j-log4j12-1.5.8.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.libthrift-0.9.2.jar}:\
+    ${file.reference.commons-codec-1.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.httpclient-4.2.5.jar}:\
+    ${file.reference.httpcore-4.2.4.jar}:\
+    ${file.reference.junit-4.4.jar}:\
+    ${file.reference.log4j-1.2.14.jar}:\
+    ${file.reference.servlet-api-2.5.jar}:\
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-log4j12-1.5.8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -57,7 +79,7 @@ main.class=irc.IRC
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
